# data-deduplication-system

./: CMakeLists.txt  LICENSE  README.md
src/: chunk_hash_manager.cc  chunk_hash_manager.h  container_manager.cc  container_manager.h  file_manager.cc  file_manager.h  file_recipe_manager.cc  file_recipe_manager.h  main.cpp  storage_manager.cc  storage_manager.h  utility.h
src/key_value_storage/: cuckoo_hash.cc  cuckoo_hash.h  key_value_storager.cc  key_value_storager.h  log_store.cc  log_store.h
